--- a/estil.less
+++ b/estil.less
@@ -1,6 +1,7 @@
 @taronja: #FE5722;
 @gris: #F1F1F1;
 @gris-marge: #cccccc;
+@marge: 40px;
 
 
 
@@ -68,9 +69,25 @@
 }
 
 .quadrats {
+    margin-top: @marge;
+    
+    
+    .hover {
+        display: none;
+        text-align: center;
+    }
+    .primer, .segon, .tercer, .quart {
+        position: relative;
+    }
     
     .segon, .tercer, .quart {
         background-color: @gris;
+    }
+    
+    .primer, .segon {
+        &:hover .hover {
+            display: block;
+        }
     }
     
     .primer {
@@ -78,11 +95,78 @@
         img {
             min-height: 100%;
         }
+        .hover {
+            position: absolute;
+            width: 100%;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+            color: white;
+            background-color: rgba(254,87,34,0.6);
+            h2 {
+                margin: 10px;
+            }
+        }
     }
     
     .segon {
         margin-right: 10px;
         margin-bottom: 10px;
+        .hover {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            top: 0;
+            left: 0;
+            h2 {
+                position: relative;
+                top: 50%;
+                -webkit-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+                color: white;
+                margin: 10px;
+            }
+        }
+    }
+    
+    .tercer .new {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        width: 70px;
+        color: white;
+        background-color: @taronja;
+        text-align: center;
+        h2 {
+            margin: 5px;
+            font-size: 1.4em;
+        }
+        
+        .triangle-esquerra, .triangle-dreta {
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-style: solid;
+        }
+        
+        .triangle-esquerra {
+            top: 100%;
+            left: 0;
+            border-width: 20px 35px 0 0;
+            border-color: @taronja transparent transparent transparent;
+            
+        }
+        
+        .triangle-dreta {
+            top: 100%;
+            right: 0;
+            border-width: 0 35px 20px 0;
+            border-color: transparent @taronja transparent transparent;
+            
+        }
     }
     
     
@@ -111,6 +195,26 @@
         overflow: auto;
         img {
             float: right;
+        }
+        
+        .women {
+            position: absolute;
+            width: 40%;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+            padding: 20px;
+            
+            p {
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
+            
+            h2 {
+                font-size: 1.7em;
+                font-weight: bold;
+            }
         }
     }
         
