--- a/comu.css
+++ b/comu.css
@@ -29,6 +29,7 @@ a:hover {
   background-color: white;
 }
 #header {
+  position: relative;
   /*a {
         display: inline-block;
         height: @header;
@@ -108,6 +109,85 @@ a:hover {
   height: 3px;
   width: 80%;
   background-color: #FE5722;
+}
+#header .boto-header {
+  float: right;
+  background-color: transparent;
+  background-image: none;
+  margin-bottom: 8px;
+  margin-top: 11px;
+  padding: 9px 10px;
+  position: relative;
+  font-size: 1.5em;
+  border-width: 0;
+  line-height: 30px;
+  color: #FE5722;
+}
+#header .boto-header.collapsed {
+  color: inherit;
+}
+#header #megamenu {
+  position: absolute;
+  top: 70px;
+  left: 20%;
+  width: 60%;
+  border: 1px solid #cccccc;
+  border-top: solid 3px #FE5722;
+  background-color: white;
+  z-index: 10;
+}
+#header .megamenu {
+  padding: 10px;
+}
+#header .megamenu a {
+  display: block;
+  margin-bottom: 10px;
+}
+#header .megamenu a:hover {
+  color: #FE5722;
+  padding-left: 10px;
+}
+#header .megamenu h2 {
+  font-size: 1.5em;
+  font-weight: bolder;
+}
+#header .megamenu .imatge-megamenu div {
+  display: inline-block;
+  position: relative;
+}
+#header .megamenu .imatge-megamenu div div {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(254, 87, 34, 0.6);
+  padding: 10px 20px 10px 20px;
+  font-size: 1.5em;
+}
+#header .megamenu .imatge-megamenu div div p {
+  color: white;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+#header .megamenu .imatge-megamenu div div p + p {
+  text-align: right;
+}
+#header .megamenu .imatge-megamenu div img {
+  margin-top: 25px;
+  max-height: 200px;
+}
+#header #carrito {
+  position: absolute;
+  top: 70px;
+  right: 0;
+  border: 1px solid #cccccc;
+  border-top: solid 3px #FE5722;
+  background-color: white;
+  z-index: 10;
+  width: 150px;
+}
+#header #carrito .item-carrito img {
+  width: 50px;
 }
 .btn:hover {
   color: inherit;
